fix: [CDS-76530]: Fixed Pipeline Input Tab content overlapping with footer for trigger (#17305)

--- a/src/modules/72-triggers/components/steps/PipelineInputPanel/PipelineInputPanel.module.scss
+++ b/src/modules/72-triggers/components/steps/PipelineInputPanel/PipelineInputPanel.module.scss
@@ -54,7 +54,7 @@
 .inputsetGrid {
   background-color: var(--form-bg);
   .input-set-content {
-    height: calc(100vh - 236px);
+    height: calc(100vh - 340px);
     overflow: auto;
   }
   .Card--card {
