--- a/src/modules/72-triggers/pages/triggers/views/WebhookPipelineInputPanel.module.scss
+++ b/src/modules/72-triggers/pages/triggers/views/WebhookPipelineInputPanel.module.scss
@@ -53,7 +53,7 @@
 .inputsetGrid {
   background-color: var(--form-bg);
   .input-set-content {
-    height: calc(100vh - 236px);
+    height: calc(100vh - 340px);
     overflow: auto;
   }
   .Card--card {
